--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-icons": "^5.5.0"
+    "framer-motion": "^12.23.26",
+    "harsh": "^1.5.1",
+    "link": "^2.1.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.9.6",
+    "react-router-hash-link": "^2.4.3",
+    "router": "^2.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
